--- a/balls2.html
+++ b/balls2.html
@@ -119,12 +119,22 @@
             let raycaster3 = new THREE.Raycaster();
             raycaster3.set(sun.position, new THREE.Vector3(-1,0,0));
             let intersects3 = raycaster3.intersectObjects(scene.children, true);
+			
+			let raycaster4 = new THREE.Raycaster();
+            raycaster4.set(sun.position, new THREE.Vector3(0,1,0));
+            let intersects4 = raycaster4.intersectObjects(scene.children, true);
 
             if(intersects.length > 0){
                 if(intersects[0].distance < sunRadio){
 					speed[1] = 27.468000000000032
                     //speed[1] = Math.abs(speed[1] * 1.0);
 					//console.log(speed[1])
+                 }
+            }
+			
+			if(intersects4.length > 0){
+                if(intersects4[0].distance < sunRadio){
+					speed[1] = Math.abs(speed[1]) * -1;					
                  }
             }
 
